packages/admin-ui/src/components/sidebar/sidebar.scss
#sidebar {
  display: flex;
  flex-direction: column;

  /* 
   * Spacer
   * To generate a responsive design with flexbox 
  */
  > .spacer {
    flex: auto;
  }

  .sidebar-media-footer {
    display: flex;
    padding: 0.5rem;
    a {
      color: inherit;
      opacity: 0.5;
      font-size: larger;
      padding: 0.5rem;
      text-decoration: none;
    }
  }
}

/* 
 * ============
 * Sidenav-item
 * ============
 */

/* Remember specificity order rules to override bootstrap */
.sidenav-item {
  border-left: 5px solid transparent;
  color: black;
  text-decoration: none;
  transition: all 0.5s;
  /* Try to standarize this size */
  font-size: 0.94rem;

  /* Subheader before the list of routes, with text: Admin UI */
  .subheader {
    font-size: 80%;
    opacity: 0.6;
  }

  /* List of routes, with dynamic styles on hover and active */
  &.selectable {
    cursor: pointer;
    /* All transitions have to be specified with commas in a single transition property */
    transition: background 150ms ease, color 150ms ease, border 150ms ease;
  }
  &.selectable:hover,
  &.selectable.active {
    border-left: 5px solid var(--dappnode-strong-main-color);
    color: black;
    font-weight: 800;
    text-decoration: none;
    background-color: #e6eceb80;
  }
  &.selectable:hover svg,
  &.selectable.active svg {
    opacity: 0.7;
  }

  &.selectable svg {
    font-size: 1.5rem;
  }
}

/* 
 * Funded-by
 */

.funded-by-text {
  opacity: 0.3;
  text-align: center;
}
/* Controls the layout of the logos, all in one row with equal spacing */
.funded-by-logos {
  --spacing: 0.7rem;
  display: grid;
  grid-auto-columns: auto;
  grid-auto-flow: column;
  /* Auto-space the items only in-between, hard to achieve with flex */
  grid-gap: var(--spacing);
  padding: var(--spacing);
}
.funded-by-logo {
  opacity: 0.15;
  transition: opacity 500ms ease;
  &:hover {
    opacity: 0.5;
  }
}

/* If the screen width is less or equal than 640 then display the funded by in flex columnd direction */
@media only screen and (max-width: 40rem) {
  .funded-by-logos {
    grid-template-columns: repeat(2, 1fr);
    grid-auto-flow: row;
    align-items: center;
  }
  .funded-by-text {
    font-size: 8px;
  }
  .funded-by-logo {
    max-width: 60%;
    max-height: 60%;
  }

  .sidenav-item {
    border: 0;
  }

  #sidebar .sidebar-media-footer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
}

